added nav header and its styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
 </head>
 
 <body>
+    <header id="home">
+        <div class="wrapper">
+            <nav>
+                <div class="nav-container">
+                    <div class="logo-container">
+                        <div class="logo">
+                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+                            <span class="logo-text">Forma’sint.</span>
+                        </div>
+                        <span class="forma-text">idomods &#60;/&#62;</span>
+                        </p>
 
+                    </div>
+                    <ul class="nav-list-container">
+                        <li class="active">
+                            <a href="#home">Home</a>
+                        </li>
+                        <li>
+                            <a href="#featured_products">Featured Products</a>
+                        </li>
+                        <li>
+                            <a href="#product_list">Product Listing</a>
+                        </li>
+                    </ul>
+                    <div class="right">
+                        <img src="images/Icon_user.svg" alt="">
+                        <h4>Frontend developer</h4>
+                    </div>
+                </div>
+
+            </nav>
+            <!-- End of Navigation section -->
+
+    </header>
+    <!-- end of header section -->
 
     <script src="main.js"></script>
 </body>
