added hero-section and its styles, removed images folder, also added images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
 
             </nav>
             <!-- End of Navigation section -->
-
+            <!-- Hero Section -->
+            <div class="hero-section">
+                <div class="hero-section-logo">
+                    <img src="images/LOGO_FORMA.svg" alt="">
+                </div>
+                <img src="images/HERO_PHOTO.png" alt="" class="hero-image">
+            </div>
+        </div>
     </header>
     <!-- end of header section -->
 
