added featured products section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,109 @@
     </header>
     <!-- end of header section -->
 
+    <!-- featured products section -->
+
+    <section id="featured_products" class="products-section">
+        <div class="wrapper">
+            <div class="products-title">
+                <p>Featured products</p>
+                <h2>Browse featured</h2>
+            </div>
+            <div class="swiper products-slider">
+
+                <div class="swiper-wrapper products ">
+                    <div class=" swiper-slide product">
+                        <div class="product-body">
+                            <h4 class="best-seller">Bestseller</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Dark blue alpine climbing jacket</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+
+                    </div>
+                    <div class=" swiper-slide product">
+                        <div class="product-body">
+                            <h4 class="limited-edition">Limited Edition</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_02.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Orange helmet for alpine TOUNDRA</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+
+                    </div>
+                    <div class="swiper-slide product">
+                        <div class="product-body">
+                            <h4>Bestseller</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_03.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Grey alpine climbing jacket</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+                    </div>
+                    <div class=" swiper-slide product">
+                        <div class="product-body">
+                            <h4 class="best-seller">Bestseller</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Dark blue alpine climbing jacket</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+
+                    </div>
+                    <div class="swiper-slide product">
+                        <div class="product-body">
+                            <h4>Bestseller</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Grey alpine climbing jacket</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+
+                    </div>
+                    <div class=" swiper-slide product">
+                        <div class="product-body">
+                            <h4 class="limited-edition">Limited Edition</h4>
+                            <img src="/images/Default.svg" alt="" class="fav-icon">
+                            <div class="image-container">
+                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
+                            </div>
+                        </div>
+                        <div class="product-details">
+                            <h3>Dark blue alpine climbing jacket</h3>
+                            <p>€300,00 EUR </p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
+    </section>
+
     <script src="main.js"></script>
 </body>
 
