added swiper functionality and dynamically added swiper product slide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -66,100 +67,21 @@
                 <h2>Browse featured</h2>
             </div>
             <div class="swiper products-slider">
-
                 <div class="swiper-wrapper products ">
-                    <div class=" swiper-slide product">
-                        <div class="product-body">
-                            <h4 class="best-seller">Bestseller</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Dark blue alpine climbing jacket</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-
-                    </div>
-                    <div class=" swiper-slide product">
-                        <div class="product-body">
-                            <h4 class="limited-edition">Limited Edition</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_02.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Orange helmet for alpine TOUNDRA</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-
-                    </div>
-                    <div class="swiper-slide product">
-                        <div class="product-body">
-                            <h4>Bestseller</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_03.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Grey alpine climbing jacket</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-                    </div>
-                    <div class=" swiper-slide product">
-                        <div class="product-body">
-                            <h4 class="best-seller">Bestseller</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Dark blue alpine climbing jacket</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-
-                    </div>
-                    <div class="swiper-slide product">
-                        <div class="product-body">
-                            <h4>Bestseller</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Grey alpine climbing jacket</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-
-                    </div>
-                    <div class=" swiper-slide product">
-                        <div class="product-body">
-                            <h4 class="limited-edition">Limited Edition</h4>
-                            <img src="/images/Default.svg" alt="" class="fav-icon">
-                            <div class="image-container">
-                                <img src="/images/product_photo_01.png" alt="" class="slider-image">
-                            </div>
-                        </div>
-                        <div class="product-details">
-                            <h3>Dark blue alpine climbing jacket</h3>
-                            <p>€300,00 EUR </p>
-                        </div>
-
-                    </div>
-
 
                 </div>
 
-
+                <div class=" swiper-button-next  slider-arrow ">
+                    <img src="/images/Chevron_right_arrow.svg" alt="">
+                </div>
+                <div class="slider-nav">
+                    <div class="progress-bar"></div>
+                </div>
             </div>
 
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 
