added funtionality to render the product list based on lazy loading

--- a/index.html
+++ b/index.html
@@ -81,6 +81,33 @@
 
     </section>
 
+    <!-- end of featured products section -->
+    <!-- products listing section -->
+    <section id="product_list" class="product-list-section">
+        <div class="wrapper">
+            <div class="headline">
+                <div class="pagination">
+                    <span class="pagination-text">Number of products per page</span>
+                    <span class="number-dropdown">
+                        <span class="number">14</span>
+                        <img src="/images/chevron_down.svg" alt="" class="dropdown-icon">
+                        <ul class="pagination-container">
+                            <li class="pagination-list-active"><a> 14 </a></li>
+                            <li><a> 24 </a></li>
+                            <li><a> 36</a></li>
+                        </ul>
+                    </span>
+
+
+                </div>
+            </div>
+            <div class="products-list">
+
+            </div>
+            <div class="popup-container">
+
+            </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
