added sidebar menu with toggle functionality and overlay

--- a/index.html
+++ b/index.html
@@ -46,6 +46,51 @@
                 </div>
 
             </nav>
+
+            <!-- mobile nav -->
+            <nav class="mobile-nav ">
+                <div class="nav-container">
+                    <div class="logo-container">
+                        <div class="logo">
+                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+                            <span class="logo-text">Forma’sint.</span>
+                        </div>
+                    </div>
+                    <div class="menu-icon">
+                        <img src="/images/MENU_HAMBURGER.svg" alt="">
+                        <span class="menu-text">Menu</span>
+                    </div>
+
+                </div>
+            </nav>
+            <!-- side menu nav -->
+            <div class="side-menu-container">
+                <div class="nav-container">
+                    <div class="logo-container">
+                        <div class="logo">
+                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+
+                        </div>
+                        <div class="close-icon">
+                            <img src="/images/CLOSE.svg" alt="" class="close-icon-img">
+                            <span class="logo-text">Close</span>
+                        </div>
+                    </div>
+                </div>
+                <ul class="side-menu-list">
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#featured_products">Featured Products</a>
+                    </li>
+                    <li>
+                        <a href="#product_list">Product Listing</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- overlay -->
+            <div class="overlay"></div>
             <!-- End of Navigation section -->
             <!-- Hero Section -->
             <div class="hero-section">
