removed unwanted forward slash from the images and svgs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+                            <img src="images/FORMA_ICON.svg" alt="form-icon" class="">
                             <span class="logo-text">Forma’sint.</span>
                         </div>
                         <span class="forma-text">idomods &#60;/&#62;</span>
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                     <div class="right">
-                        <img src="images/Icon_user.svg" alt="">
+                        <img src="images/Icon_user.svg" alt="user">
                         <h4>Frontend developer</h4>
                     </div>
                 </div>
@@ -52,12 +52,12 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+                            <img src="images/FORMA_ICON.svg" alt="form-icon" class="">
                             <span class="logo-text">Forma’sint.</span>
                         </div>
                     </div>
                     <div class="menu-icon">
-                        <img src="/images/MENU_HAMBURGER.svg" alt="">
+                        <img src="images/MENU_HAMBURGER.svg" alt="menu">
                         <span class="menu-text">Menu</span>
                     </div>
 
@@ -68,11 +68,11 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="/images/FORMA_ICON.svg" alt="" class="">
+                            <img src="images/FORMA_ICON.svg" alt="side-bar" class="">
 
                         </div>
                         <div class="close-icon">
-                            <img src="/images/CLOSE.svg" alt="" class="close-icon-img">
+                            <img src="images/CLOSE.svg" alt="close-icon" class="close-icon-img">
                             <span class="logo-text">Close</span>
                         </div>
                     </div>
@@ -95,9 +95,9 @@
             <!-- Hero Section -->
             <div class="hero-section">
                 <div class="hero-section-logo">
-                    <img src="images/LOGO_FORMA.svg" alt="">
+                    <img src="images/LOGO_FORMA.svg" alt="logo">
                 </div>
-                <img src="images/HERO_PHOTO.png" alt="" class="hero-image">
+                <img src="images/HERO_PHOTO.png" alt="hero-image" class="hero-image">
             </div>
         </div>
     </header>
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class=" swiper-button-next  slider-arrow ">
-                    <img src="/images/Chevron_right_arrow.svg" alt="">
+                    <img src="images/Chevron_right_arrow.svg" alt="arrow-icon">
                 </div>
                 <div class="slider-nav">
                     <div class="progress-bar"></div>
@@ -135,7 +135,7 @@
                     <span class="pagination-text">Number of products per page</span>
                     <span class="number-dropdown">
                         <span class="number">14</span>
-                        <img src="/images/chevron_down.svg" alt="" class="dropdown-icon">
+                        <img src="images/chevron_down.svg" alt="pagination" class="dropdown-icon">
                         <ul class="pagination-container">
                             <li class="pagination-list-active"><a> 14 </a></li>
                             <li><a> 24 </a></li>
