added hover effects to heart and logo,updataed lazy loading

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="images/FORMA_ICON.svg" alt="form-icon" class="">
+                            <img src="images/FORMA_ICON.svg" alt="form-icon" />
+                            <img src="images/FORMA_ICON_Fill.svg" alt="form-icon" class="top-logo" />
                             <span class="logo-text">Forma’sint.</span>
                         </div>
                         <span class="forma-text">idomods &#60;/&#62;</span>
@@ -52,7 +53,8 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="images/FORMA_ICON.svg" alt="form-icon" class="">
+                            <img src="images/FORMA_ICON.svg" alt="form-icon">
+                            <img src="images/FORMA_ICON_Fill.svg" alt="form-icon" class="top-logo" />
                             <span class="logo-text">Forma’sint.</span>
                         </div>
                     </div>
@@ -68,8 +70,8 @@
                 <div class="nav-container">
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="images/FORMA_ICON.svg" alt="side-bar" class="">
-
+                            <img src="images/FORMA_ICON.svg" alt="side-bar" class="logo-icon">
+                            <img src="images/FORMA_ICON_Fill.svg" alt="form-icon" class="top-logo" />
                         </div>
                         <div class="close-icon">
                             <img src="images/CLOSE.svg" alt="close-icon" class="close-icon-img">
