--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src="images/Chevron_right_arrow.svg" alt="arrow-icon">
                 </div>
                 <div class="slider-nav">
-                    <div class="progress-bar"></div>
+                    <div class="swiper-pagination "></div>
                 </div>
             </div>
 
